--- a/connect4.css
+++ b/connect4.css
@@ -3,17 +3,41 @@ content {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    align-items: center;
-    align-content: center;
-    width: 90%;
+    width: 50%;
     margin: 0 auto;
-    height: 700px;
+    height: 800px;
 }
 
 nav {
-    background-color: brown;
-    width: 19%;
-    height: 100%;
+    background-color: #f5f5f5;
+    width: max-content;
+    height: max-content;
+    box-shadow: inset 0 0 10px lightgray;
+    border-radius: 5px;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+nav h4 {
+    font-weight: 600;
+    font-size: 17px;
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    margin-top: 10px;
+}
+
+nav button {
+    background-color: #f5f5f5;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 15px;
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    margin-top: 10px;
+    cursor: pointer;
+    box-shadow: 0 0 10px lightgray;
+    font-weight: 800;
 }
 
 #connect4Canvas {
