--- a/connect4.css
+++ b/connect4.css
@@ -1,43 +1,43 @@
 content {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    width: 50%;
-    margin: 0 auto;
-    height: 800px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  width: 1000px;
+  margin: 0 auto;
+  height: 800px;
 }
 
 nav {
-    background-color: #f5f5f5;
-    width: max-content;
-    height: max-content;
-    box-shadow: inset 0 0 10px lightgray;
-    border-radius: 5px;
-    padding: 20px;
-    box-sizing: border-box;
+  background-color: #f5f5f5;
+  width: max-content;
+  height: max-content;
+  box-shadow: inset 0 0 10px lightgray;
+  border-radius: 5px;
+  padding: 20px;
+  box-sizing: border-box;
 }
 
 nav h4 {
-    font-weight: 600;
-    font-size: 17px;
-    font-family: 'Roboto', sans-serif;
-    margin: 0;
-    margin-top: 10px;
+  font-weight: 600;
+  font-size: 17px;
+  font-family: "Roboto", sans-serif;
+  margin: 0;
+  margin-top: 10px;
 }
 
 nav button {
-    background-color: #f5f5f5;
-    border: none;
-    border-radius: 5px;
-    padding: 10px;
-    font-size: 15px;
-    font-family: 'Roboto', sans-serif;
-    margin: 0;
-    margin-top: 10px;
-    cursor: pointer;
-    box-shadow: 0 0 10px lightgray;
-    font-weight: 800;
+  background-color: #f5f5f5;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  font-size: 15px;
+  font-family: "Roboto", sans-serif;
+  margin: 0;
+  margin-top: 10px;
+  cursor: pointer;
+  box-shadow: 0 0 10px lightgray;
+  font-weight: 800;
 }
 
 #connect4Canvas {
