--- a/connect4.css
+++ b/connect4.css
@@ -1,3 +1,11 @@
+body {
+  background: url(Assets/image/back.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+}
+
 content {
   display: flex;
   flex-direction: row;
@@ -41,7 +49,7 @@ nav button {
 }
 
 #connect4Canvas {
-  background-color: white;
+  background-color: transparent;
   width: 79%;
   height: 100%;
 }
