--- a/connect4.css
+++ b/connect4.css
@@ -20,9 +20,12 @@ nav {
   background-color: #f5f5f5;
   width: max-content;
   height: max-content;
+  position: absolute;
   box-shadow: inset 0 0 10px lightgray;
   border-radius: 5px;
   padding: 20px;
+  left: 5%;
+  top: 5%;
   box-sizing: border-box;
 }
 
@@ -50,6 +53,6 @@ nav button {
 
 #connect4Canvas {
   background-color: transparent;
-  width: 79%;
+  width: 89%;
   height: 100%;
 }
