--- a/src/connect4.css
+++ b/src/connect4.css
@@ -144,3 +144,44 @@ nav button {
   width: 89%;
   height: 100%;
 }
+
+
+input[type=checkbox] {
+  position: relative;
+  width: 20px;
+  height: 10px;
+  -webkit-appearance: none;
+  -webkit-appearance: none;
+  background: #c6c6c6;
+  outline: none;
+  cursor: pointer;
+  border-radius: 10px;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+  transition: background 300ms linear;
+}
+input[type=checkbox]::before {
+  position: absolute;
+  content: "";
+  width: 15px;
+  height: 15px;
+  top: 0px;
+  left: 0px;
+  border-radius: 8px;
+  background-color: #fff;
+  transform: scale(1.1) translateX(-7px) translateY(-3px);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  transition: left 300ms linear;
+}
+input[type=checkbox]:checked {
+  background: #03a9f4;
+}
+input[type=checkbox]:checked::before {
+  left: 22px;
+  background-color: #fff;
+}
+
+#nav-toggle-animateSpeed {
+  position: absolute;
+  top: 50%;
+  left: 30px;
+}
