--- a/src/connect4.css
+++ b/src/connect4.css
@@ -260,6 +260,7 @@ nav {
   left: 5%;
   top: 5%;
   box-sizing: border-box;
+  z-index: 20;
 }
 
 nav h4 {
@@ -288,6 +289,7 @@ nav button {
   background-color: transparent;
   width: 89%;
   height: 100%;
+  opacity: 0.7;
 }
 
 input[type="checkbox"] {
