--- a/src/connect4.css
+++ b/src/connect4.css
@@ -240,10 +240,6 @@ body {
 }
 
 content {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
   width: 1000px;
   margin: 0 auto;
   height: 800px;
@@ -284,12 +280,37 @@ nav button {
   box-shadow: 0 0 10px lightgray;
   font-weight: 800;
 }
+#hologram1 {
+  position: absolute;
+  top: 108px;
+  left: 50%;
+  transform: translateX(calc(-50% - 50px));
+  width: 600px;
+  height: 585px;
+  z-index: -1;
+  border-radius: 20px;
+  box-shadow: inset 0 -10px 10px -5px #fff, inset 0 0 5px #fff, inset 0 0 12.5px #fff, inset 0 0 20px #07f, inset 0 0 40px #7FF, 0 0 3px #fff, 0 0 20px #0bf, 0 0 50px #07f, 0 0 35px #7FF;
+}
+#hologram2 {
+  background: url(https://www.pngall.com/wp-content/uploads/5/Hologram-PNG-Picture.png) no-repeat;
+  background-size: cover;
+  position: absolute;
+  bottom: 0;
+  height: 400px;
+  width: 600px;
+  left: 50%;
+  transform: translateX(calc(-50% - 50px)) scale(1.3);
+  z-index: -1;
+}
 
 #connect4Canvas {
   background-color: transparent;
-  width: 89%;
   height: 100%;
-  opacity: 0.7;
+  width: 890px;
+  margin: 0 auto;
+  display: block;
+  opacity: 0.5;
+  filter: brightness(1.2);
 }
 
 input[type="checkbox"] {
@@ -332,7 +353,8 @@ input[type="checkbox"]:checked::before {
   left: 30px;
 }
 #glitch {
-  animation: glitch 1s linear infinite;
+  width: 89%;
+  animation: glitch 6s linear infinite;
 }
 
 @keyframes glitch {
