--- a/src/connect4.css
+++ b/src/connect4.css
@@ -2,6 +2,7 @@ html,
 body {
   height: 100%;
   overflow: hidden;
+  margin: 0;
 }
 
 body {
@@ -244,51 +245,15 @@ content {
   margin: 0 auto;
   height: 800px;
 }
-
-nav {
-  background-color: #f5f5f5;
-  width: max-content;
-  height: max-content;
-  position: absolute;
-  box-shadow: inset 0 0 10px lightgray;
-  border-radius: 5px;
-  padding: 20px;
-  left: 5%;
-  top: 5%;
-  box-sizing: border-box;
-  z-index: 20;
-}
-
-nav h4 {
-  font-weight: 600;
-  font-size: 17px;
-  font-family: "Roboto", sans-serif;
-  margin: 0;
-  margin-top: 10px;
-}
-
-nav button {
-  background-color: #f5f5f5;
-  border: none;
-  border-radius: 5px;
-  padding: 10px;
-  font-size: 15px;
-  font-family: "Roboto", sans-serif;
-  margin: 0;
-  margin-top: 10px;
-  cursor: pointer;
-  box-shadow: 0 0 10px lightgray;
-  font-weight: 800;
-}
 #hologram1 {
   position: absolute;
   top: 108px;
-  left: 50%;
+  left: calc(50% + 25px);
   transform: translateX(calc(-50% - 50px));
   width: 600px;
   height: 585px;
   z-index: -1;
-  border-radius: 20px;
+  border-radius: 22px;
   box-shadow: inset 0 -10px 10px -5px #fff, inset 0 0 5px #fff, inset 0 0 12.5px #fff, inset 0 0 20px #07f, inset 0 0 40px #7FF, 0 0 3px #fff, 0 0 20px #0bf, 0 0 50px #07f, 0 0 35px #7FF;
 }
 #hologram2 {
@@ -298,9 +263,10 @@ nav button {
   bottom: 0;
   height: 400px;
   width: 600px;
-  left: 50%;
+  left: calc(50% + 25px);
   transform: translateX(calc(-50% - 50px)) scale(1.3);
   z-index: -1;
+  filter: brightness(1.5);
 }
 
 #connect4Canvas {
@@ -308,50 +274,12 @@ nav button {
   height: 100%;
   width: 890px;
   margin: 0 auto;
+  border-left: 50px solid transparent;
   display: block;
   opacity: 0.5;
   filter: brightness(1.2);
 }
 
-input[type="checkbox"] {
-  position: relative;
-  width: 20px;
-  height: 10px;
-  -webkit-appearance: none;
-  -webkit-appearance: none;
-  background: #c6c6c6;
-  outline: none;
-  cursor: pointer;
-  border-radius: 10px;
-  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
-  transition: background 300ms linear;
-}
-input[type="checkbox"]::before {
-  position: absolute;
-  content: "";
-  width: 15px;
-  height: 15px;
-  top: 0px;
-  left: 0px;
-  border-radius: 8px;
-  background-color: #fff;
-  transform: scale(1.1) translateX(-7px) translateY(-3px);
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-  transition: left 300ms linear;
-}
-input[type="checkbox"]:checked {
-  background: #03a9f4;
-}
-input[type="checkbox"]:checked::before {
-  left: 22px;
-  background-color: #fff;
-}
-
-#nav-toggle-animateSpeed {
-  position: absolute;
-  top: 50%;
-  left: 30px;
-}
 #glitch {
   width: 89%;
   animation: glitch 6s linear infinite;
@@ -416,4 +344,385 @@ input[type="checkbox"]:checked::before {
   62% {
     transform: translate(-22px, 5px) skew(21deg);
   }
+}
+
+@import url("https://fonts.googleapis.com/css?family=VT323|Audiowide");
+body {
+  font-family: "Audiowide", sans-serif;
+  }
+  nav {
+    position: absolute;
+    bottom:0;
+    left:0;
+    z-index: 10;
+  }
+
+label i, label svg {
+  font-size: 30px;
+  text-shadow: 0 0 1px black;
+}
+  
+  #pan-bottom {
+    position: absolute;
+    bottom:0;
+    left:0;
+    width: 2000px;
+    height:80px;
+    border-top: 5px solid grey;
+    background-image: url(https://t3.ftcdn.net/jpg/01/11/42/58/360_F_111425816_kvcrQwPiqcVvpP3WCX8a6FdI9zEQ0IWb.jpg);
+  }
+  #pan-left{
+    position: absolute;
+    color:#9effff;
+    background: rgba(184, 237, 255, 0.4);
+    border:solid 3px #9effff;
+    border-radius: 10px;
+    transform: rotateY(20deg) rotateX(10deg) rotateZ(-2deg);
+    width: 200px;
+    bottom: 50px;
+    left: 20px;
+    text-align: center;
+    padding: 20px;
+  }
+
+#pan-left::before {
+  content: "";
+  position: absolute; 
+  width: 200px;
+  height: 100%;
+  bottom: 0px;
+  left: 0px;
+  padding: 0 20px;
+  border-radius: 10px;
+  opacity: .4; 
+  z-index: -1;
+  background: url(https://wallpapercave.com/wp/wp3297214.jpg);
+}
+
+:root {
+	--dur: 0.3s;
+	--dur2: 0.15s;
+  --form-control-color: #9effff;
+  --form-control-disabled: #9effff;
+	font-size: 16px;
+}
+  /* Lever */
+  #pan-bottom input[type="checkbox"] {
+      background-image:
+          radial-gradient(2px 3px at 50% 50%, rgb(204,204,204) 25%, rgb(170,170,170) 49%, rgba(170,170,170,0) 50%),
+          radial-gradient(1.3px 2px at 50% 53%, rgb(68,68,68), rgba(68,68,68,0)),
+          radial-gradient(1.5px 1.5px at 55% 45%, rgb(255,255,255), rgba(255,255,255,0)),
+          radial-gradient(1px 0.8px at 43% 56%, rgba(255,255,255,0.5), rgba(255,255,255,0)),
+          radial-gradient(1px 0.8px at 55% 57%, rgba(255,255,255,0.6), rgba(255,255,255,0)),
+          radial-gradient(1px 0.8px at 50% 60%, rgba(255,255,255,0.6), rgba(255,255,255,0)),
+          radial-gradient(100% 100% at 50% 50%, rgb(238,238,238), rgb(170,170,170) 10%, rgb(0,0,0) 18%, rgb(0,0,0) 21%, rgb(153,153,153) 21.5%, rgb(153,153,153) 24%, rgba(153,153,153,0) 24.5%, rgba(221,221,221,0) 30%, rgb(221,221,221) 30.5%, rgb(221,221,221) 33%, rgb(68,68,68) 33.5%, rgb(68,68,68) 35%, rgba(68,68,68,0) 35.5%, rgba(221,221,221,0) 41%, rgb(221,221,221) 41.5%, rgb(238,238,238) 45%, rgb(68,68,85) 45.5%, rgb(68,68,85) 49%, rgba(68,68,85,0) 50%),
+          radial-gradient(4px 4px at 35% 20%, rgb(255,255,255), rgba(255,255,255,0) 4px),
+          radial-gradient(4px 4px at 65% 80%, rgb(255,255,255), rgba(255,255,255,0) 4px),
+          radial-gradient(4px 4px at 80% 35%, rgb(255,255,255), rgba(255,255,255,0) 4px),
+          radial-gradient(4px 4px at 20% 65%, rgb(255,255,255), rgba(255,255,255,0) 4px),
+          radial-gradient(100% 100% at center, rgb(170,170,170) 49%, rgba(170,170,170,0) 50%);
+      background-position: 1px 0, 1px 0, 0 0, 0 0, 0 0, 0 0, 0 0, 0 0, 0 0, 0 0, 0 0, 0 0;
+      border-radius: 50%;
+      box-shadow: 0 4px 4px rgba(0,0,0,0.3);
+      cursor: pointer;
+      font-size: 2px;
+      display: block;
+      outline: 0;
+      position: absolute;
+      width: 24px;
+      height: 24px;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+      transition: background-position var(--dur) linear;
+      transform: translateX(50px) translateY(4px) rotate(90deg);
+  }
+#pan-bottom input[type="checkbox"] + label {
+    color: #E00;
+}
+form input[type="checkbox"] + label {
+  color: grey;
+    cursor: pointer;
+}
+#pan-bottom input[type="checkbox"]:checked + label {
+  color: #0E0;
+}
+form input[type="checkbox"]:checked + label {
+  color: #9effff;
+}
+  #pan-bottom input[type="checkbox"]:before, #pan-bottom input[type="checkbox"]:after {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+  }
+  #pan-bottom input[type="checkbox"]:before {
+      animation: leverAOff var(--dur) linear forwards;
+      background:
+          radial-gradient(35% 25% at 50% 25%, rgb(136,136,153) 20%, rgba(136,136,153,0)),
+          radial-gradient(2px 1.5px at 32% 75%, rgb(102,102,102), rgba(102,102,102,0)),
+          radial-gradient(2px 1.5px at 65% 78%, rgb(102,102,102), rgba(102,102,102,0)),
+          radial-gradient(100% 100% at center, rgb(68,68,68) 49.5%, rgba(68,68,68,0) 50%);
+      box-shadow:
+          -2px 4px 2px rgba(0,0,0,0.3),
+          -2px 5px 4px rgba(0,0,0,0.2),
+          -2px 7px 4px rgba(0,0,0,0.2),
+          -2px 9px 4px rgba(0,0,0,0.2),
+          -2px 11px 4px rgba(0,0,0,0.2);
+      border-radius: 50%;
+      width: 8px;
+      height: 8px;
+      transform: translate(100%,-50%);
+      z-index: 1;
+  }
+  #pan-bottom input[type="checkbox"]:checked {
+      background-position: -1px 0, -1px 0, 0 0, 0 0, 0 0, 0 0, 0 0, 0 0, 0 0, 0 0, 0 0, 0 0;
+  }
+  #pan-bottom input[type="checkbox"]:checked:before {
+      animation: leverAOn var(--dur) linear forwards;
+  }
+  #pan-bottom input[type="checkbox"]:after {
+      animation: leverBOff var(--dur) linear forwards;
+      background-color: #333;
+      border-radius: 30px;
+      box-shadow: 0 0 2px #667 inset;
+      width: 15px;
+      height: 8px;
+      transform: translate(1px,-50%);
+  }
+  #pan-bottom input[type="checkbox"]:checked:after {
+      animation: leverBOn var(--dur) linear forwards;
+  }
+  /* To stop animations from running on load */
+  #pan-bottom .pristine:before,#pan-bottom .pristine:after {
+      animation: none;
+  }
+
+form input[type="checkbox"] {
+    cursor: pointer;
+   -webkit-appearance: none;
+  /* Remove most all native input styles */
+  -moz-appearance: none;
+       appearance: none;
+  /* For iOS < 15 */
+  background-color: var(--form-background);
+  /* Not removed via appearance */
+  margin: 0;
+  position: absolute;
+  font: inherit;
+  color: currentColor;
+  width: 1.15em;
+  height: 1.15em;
+  border: 0.15em solid currentColor;
+  border-radius: 0.15em;
+  transform: translateY(-0.075em);
+  display: grid;
+  place-content: center;
+  transform: translateX(50px) translateY(10px);
+}
+form input[type=checkbox]::before {
+  content: "";
+  width: 0.65em;
+  height: 0.65em;
+  -webkit-clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+          clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+  transform: scale(0);
+  transform-origin: bottom left;
+  transition: 120ms transform ease-in-out;
+  box-shadow: inset 1em 1em var(--form-control-color);
+  /* Windows High Contrast Mode */
+  background-color: CanvasText;
+}
+
+form input[type=checkbox]:checked::before {
+  transform: scale(1);
+}
+
+form input[type=checkbox]:disabled {
+  --form-control-color: var(--form-control-disabled);
+  color: var(--form-control-disabled);
+  cursor: not-allowed;
+}
+
+#nav-toggle-animateSpeed {
+  position: absolute;
+  left: 450px;
+  transform: translateY(0px) scale(4);
+}
+#nav-toggle-animateSpeed label i, #nav-toggle-animateSpeed label svg {
+  font-size: 10px;
+  transform: translateX(40px) translateY(7px);
+}
+form label svg {
+  width: 60px!important;
+  font-size: 30px!important;
+}
+  
+  @keyframes leverAOn {
+      from {
+          box-shadow:
+              -4px 8px 4px rgba(0,0,0,0.3),
+              -4px 10px 8px rgba(0,0,0,0.2),
+              -4px 14px 8px rgba(0,0,0,0.2),
+              -4px 18px 8px rgba(0,0,0,0.2),
+              -4px 22px 8px rgba(0,0,0,0.2);
+          transform: translate(100%,-50%);
+      }
+      50% {
+          box-shadow:
+              0 12px 4px rgba(0,0,0,0.3),
+              0 10px 8px rgba(0,0,0,0.2),
+              0 14px 8px rgba(0,0,0,0.2),
+              0 18px 8px rgba(0,0,0,0.2),
+              0 22px 8px rgba(0,0,0,0.2);
+      }
+      to {
+          box-shadow:
+              4px 8px 4px rgba(0,0,0,0.3),
+              4px 10px 8px rgba(0,0,0,0.2),
+              4px 14px 8px rgba(0,0,0,0.2),
+              4px 18px 8px rgba(0,0,0,0.2),
+              4px 22px 8px rgba(0,0,0,0.2);
+          transform: translate(-200%,-50%);
+      }
+  }
+  @keyframes leverAOff {
+      from {
+          box-shadow:
+              4px 8px 4px rgba(0,0,0,0.3),
+              4px 10px 8px rgba(0,0,0,0.2),
+              4px 14px 8px rgba(0,0,0,0.2),
+              4px 18px 8px rgba(0,0,0,0.2),
+              4px 22px 8px rgba(0,0,0,0.2);
+          transform: translate(-200%,-50%);
+      }
+      50% {
+          box-shadow:
+              0 12px 4px rgba(0,0,0,0.3),
+              0 10px 8px rgba(0,0,0,0.2),
+              0 14px 8px rgba(0,0,0,0.2),
+              0 18px 8px rgba(0,0,0,0.2),
+              0 22px 8px rgba(0,0,0,0.2);
+      }
+      to {
+          box-shadow:
+              -4px 8px 4px rgba(0,0,0,0.3),
+              -4px 10px 8px rgba(0,0,0,0.2),
+              -4px 14px 8px rgba(0,0,0,0.2),
+              -4px 18px 8px rgba(0,0,0,0.2),
+              -4px 22px 8px rgba(0,0,0,0.2);
+          transform: translate(100%,-50%);
+      }
+  }
+  @keyframes leverBOn {
+      from { width: 15px; transform: translate(1px,-50%); }
+      50% { width: 8px; transform: translate(-50%,-50%); }
+      to { width: 15px; transform: translate(-16px,-50%); }
+  }
+  @keyframes leverBOff {
+      from { width: 15px; transform: translate(-16px,-50%); }
+      50% { width: 8px; transform: translate(-50%,-50%); }
+      to { width: 15px; transform: translate(1px,-50%); }
+  }
+
+
+input[type="radio"] {
+    opacity: 0;
+    position: absolute;   
+}
+
+input[type="radio"], input[type="radio"] + label {
+    display: inline-block;
+    vertical-align: middle;
+    margin: 5px;
+    cursor: pointer;
+}
+
+input[type="radio"] + label {
+    position: relative;
+}
+
+input[type="radio"] + label:before {
+    content: '';
+    background: grey;
+    border: 2px solid #9effff;
+    display: inline-block;
+    vertical-align: middle;
+    width: 5px;
+    height: 5px;
+    padding: 2px;
+    margin-right: 10px;
+    text-align: center;
+}
+
+input[type="radio"] + label:before {
+    border-radius: 50%;
+}
+
+input[type="radio"]:checked + label:before {
+    background: #9effff;
+    box-shadow: inset 0px 0px 0px 4px #9effff;
+}
+
+#hologram3 {
+  background: url(https://www.pngall.com/wp-content/uploads/5/Hologram-PNG-Picture.png) no-repeat;
+  background-size: cover;
+  width: 600px;
+  height: 500px;
+  position: absolute;
+  left:0;
+  bottom:0;
+  z-index: -1;
+  transform: translateX(-250px) translateY(130px) rotate(60deg) scale(0.9);
+    filter: brightness(1.5);
+}
+
+button[type=submit] {
+  position: absolute;
+  cursor: pointer;
+  left: 300px;
+  width: 15px;
+  height: 50px;
+  display: block;
+  background-color: #222;
+  box-shadow: inset 0 5px 10px grey;
+  position: absolute;
+  border: none;
+  transform: rotateY(20deg) rotateX(-10deg) rotateZ(2deg);
+  transition: all .2s linear;
+}
+
+button[type=submit]:before {
+  content: "";
+  display: block;
+  position: relative;
+  border-radius: 5px;
+  width: 250px;
+  height: 50px;
+  background: url(https://thumbs.dreamstime.com/b/metal-template-background-steel-metal-plate-steel-metal-texture-design-black-background-silver-metal-plate-rivets-185639755.jpg) no-repeat;
+  background-size: cover;
+  background-position: center;
+  transform: translateX(-20px) translateY(-40px);
+  transition: all .2s linear;
+}
+button[type=submit]:after {
+  content: "";
+  display: block;
+  position: relative;
+  width: 15px;
+  height: 50px;
+  background-color: #222;
+  box-shadow: inset 0 5px 10px grey;
+  z-index: -10;
+  transform: translateX(200px) translateY(-50px);
+  transition: all .2s linear;
+}
+
+button[type=submit]:active:before {
+  transform: translateX(-20px) translateY(-10px) scale(1.03);
+}
+button[type=submit]:active, button[type=submit]:active:after {
+  background-color: #1B1B1B;
+  box-shadow: inset 0 5px 10px #444;
 }
