--- a/src/connect4.css
+++ b/src/connect4.css
@@ -248,7 +248,7 @@ content {
 #hologram1 {
   position: absolute;
   top: 108px;
-  left: calc(50% + 25px);
+  left:50%;
   transform: translateX(calc(-50% - 50px));
   width: 600px;
   height: 585px;
@@ -263,7 +263,7 @@ content {
   bottom: 0;
   height: 400px;
   width: 600px;
-  left: calc(50% + 25px);
+  left:50%;
   transform: translateX(calc(-50% - 50px)) scale(1.3);
   z-index: -1;
   filter: brightness(1.5);
@@ -274,7 +274,6 @@ content {
   height: 100%;
   width: 890px;
   margin: 0 auto;
-  border-left: 50px solid transparent;
   display: block;
   opacity: 0.5;
   filter: brightness(1.2);
@@ -367,7 +366,7 @@ label i, label svg {
     bottom:0;
     left:0;
     width: 2000px;
-    height:80px;
+    height: 80px;
     border-top: 5px solid grey;
     background-image: url(https://t3.ftcdn.net/jpg/01/11/42/58/360_F_111425816_kvcrQwPiqcVvpP3WCX8a6FdI9zEQ0IWb.jpg);
   }
