--- a/src/connect4.css
+++ b/src/connect4.css
@@ -247,11 +247,11 @@ content {
 }
 #hologram1 {
   position: absolute;
-  top: 108px;
+  top: 12.5%;
   left:50%;
   transform: translateX(calc(-50% - 50px));
   width: 600px;
-  height: 585px;
+  height: 69%;
   z-index: -1;
   border-radius: 22px;
   box-shadow: inset 0 -10px 10px -5px #fff, inset 0 0 5px #fff, inset 0 0 12.5px #fff, inset 0 0 20px #07f, inset 0 0 40px #7FF, 0 0 3px #fff, 0 0 20px #0bf, 0 0 50px #07f, 0 0 35px #7FF;
