--- a/src/connect4.css
+++ b/src/connect4.css
@@ -240,6 +240,69 @@ body {
   }
 }
 
+#coin {
+  background: var(--jeton);
+  position: absolute;
+  top: 20px;
+  width: 75px;
+  height: 75px;
+  opacity: 0.5;
+  border-radius: 50%;
+  -webkit-transform-style: preserve-3d;
+  animation: spin 2s linear infinite;
+}
+@keyframes spin {
+  0% {
+    transform: rotateY(0deg);
+  }
+  100% {
+    transform: rotateY(360deg);
+  }
+}
+
+#coin:before {
+  background-color: var(--jeton);
+  position: absolute;
+  border-radius: 50%;
+  content: "";
+  height: 75px;
+  width: 75px;
+  -webkit-transform: translateZ(-6.75px);
+}
+#coin:after {
+  background-color: var(--jeton);
+  content: "";
+  left: 31.75px;
+  position: absolute;
+  height: 77px;
+  width: 6.75px;
+  z-index: -10;
+  -webkit-transform: rotateY(-90deg);
+  -webkit-transform-origin: 100% 50%;
+}
+
+.tails {
+  background-color: var(--jeton);
+  position: absolute;
+  border-radius: 50%;
+  content: "";
+  height: 75px;
+  width: 75px;
+  -webkit-transform: translateZ(-0.045px);
+  border: 1px solid var(--jeton);
+}
+
+.heads {
+  background-color: var(--jeton);
+  position: absolute;
+  border-radius: 50%;
+  content: "";
+  height: 75px;
+  width: 75px;
+  -webkit-transform: translateZ(-7px);
+  border: 1px solid var(--jeton);
+}
+
 content {
   width: 1000px;
   margin: 0 auto;
@@ -399,6 +462,7 @@ label i, label svg {
 }
 
 :root {
+  --jeton: #ffdd00;
 	--dur: 0.3s;
 	--dur2: 0.15s;
   --form-control-color: #9effff;
