--- a/src/connect4.css
+++ b/src/connect4.css
@@ -790,3 +790,7 @@ button[type=submit]:active, button[type=submit]:active:after {
   background-color: #1B1B1B;
   box-shadow: inset 0 5px 10px #444;
 }
+
+video {
+  display:none;
+}
