--- a/src/connect4.css
+++ b/src/connect4.css
@@ -791,6 +791,76 @@ button[type=submit]:active, button[type=submit]:active:after {
   box-shadow: inset 0 5px 10px #444;
 }
 
-video {
+video, audio {
   display:none;
+}
+
+.gif {
+  z-index: -1;
+}
+
+.gif1 {
+  top: 0px;
+  right: -300px;
+  animation: gif1 7s linear;
+}
+.gif2 {
+  bottom: 0px;
+  left: -300px;
+  animation: gif2 7s linear;
+}
+.gif3 {
+  bottom: 0px;
+  right: -300px;
+  animation: gif3 7s linear;
+}
+.gif4 {
+  top: 0px;
+  left: -300px;
+  animation: gif4 7s linear;
+}
+
+@keyframes gif1 {
+  0% {
+    transform: translateX(30vw) translateY(0vh) rotate(0deg) scale(1);
+  }
+  50% {
+    transform: translateX(-60vw) translateY(10vh) rotate(45deg) scale(0.8);
+  }
+  100% {
+    transform: translateX(-150vw) translateY(23vh) rotate(90deg) scale(1);
+  }
+}
+@keyframes gif2 {
+  0% {
+    transform: translateX(-30vw) translateY(20vh) rotate(0deg) scale(1);
+  }
+  50% {
+    transform: translateX(60vw) translateY(-30vh) rotate(-45deg) scale(1.1);
+  }
+  100% {
+    transform: translateX(150vw) translateY(-80vh) rotate(-90deg) scale(1);
+  }
+}
+@keyframes gif3 {
+  0% {
+    transform: translateX(30vw) translateY(0vh) rotate(0deg) scale(1);
+  }
+  50% {
+    transform: translateX(-60vw) translateY(-30vh) rotate(-20deg) scale(1);
+  }
+  100% {
+    transform: translateX(-150vw) translateY(-60vh) rotate(-40deg) scale(1);
+  }
+}
+@keyframes gif4 {
+  0% {
+    transform: translateX(-30vw) translateY(0px) rotate(0deg) scale(1);
+  }
+  50% {
+    transform: translateX(60vw) translateY(50vh) rotate(90deg) scale(0.7);
+  }
+  100% {
+    transform: translateX(150vw) translateY(100vh) rotate(180deg) scale(1);
+  }
 }
