--- a/src/connect4.css
+++ b/src/connect4.css
@@ -864,3 +864,232 @@ video, audio {
     transform: translateX(150vw) translateY(100vh) rotate(180deg) scale(1);
   }
 }
+
+/* Color Picker */
+
+.values {
+  text-align: center;
+  margin-top: 20px;
+  padding: 10px;
+  color: #aaa;
+  background: rgba(0, 0, 0, 0.5);
+  font-family: 'Open Sans', sans-serif;
+}
+
+.button {
+  transform: scale(0.4);
+  margin: 30px auto 0;
+  width: 14em;
+  height: 14em;
+  border-radius: 3em;
+  position: absolute;
+  bottom: -75px;
+  left: 750px;
+}
+.button2 {
+  left: 850px;
+}
+.button:before, .button:after {
+  box-sizing: border-box;
+  display: block;
+}
+.button:before {
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+  left: calc(50% - 6.5em);
+  top: calc(50% - 6.5em);
+  width: 13em;
+  height: 13em;
+  background-image: linear-gradient(to bottom, #000, #666);
+  -webkit-filter: blur(4px);
+}
+.button:after {
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+  left: calc(50% - 5.5em);
+  top: calc(50% - 5.5em);
+  width: 11em;
+  height: 11em;
+  background-image: linear-gradient(to bottom, #505050, #333 80%);
+  box-shadow: 0 4px 28px -10px rgba(0, 0, 0, 0.2);
+}
+
+.wheel, .colors, .color {
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+  left: calc(50% - 4.75em);
+  top: calc(50% - 4.75em);
+  width: 9.5em;
+  height: 9.5em;
+}
+
+.wheel {
+  overflow: hidden;
+  display: block;
+  z-index: 1;
+  box-shadow: inset 0 16px 32px 14px rgba(0, 0, 0, 0.7);
+}
+
+.colors {
+  list-style: none;
+  background: #333;
+  position: relative;
+  -webkit-filter: blur(10px);
+  transform: translateX(-15px) translateY(-15px) rotate(170deg) scaleX(-1);
+}
+
+.color {
+  clip: rect(0px, 9.5em, 9.5em, 4.75em);
+}
+.color:after {
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+  left: calc(50% - 4.75em);
+  top: calc(50% - 4.75em);
+  width: 9.5em;
+  height: 9.5em;
+  clip: rect(0px, 4.75em, 9.5em, 0px);
+}
+
+.color:nth-child(1):after {
+  background-color: #9ED110;
+  z-index: 12;
+  transform: rotate(30deg);
+}
+
+.color:nth-child(2):after {
+  background-color: #50B517;
+  z-index: 11;
+  transform: rotate(60deg);
+}
+
+.color:nth-child(3):after {
+  background-color: #179067;
+  z-index: 10;
+  transform: rotate(90deg);
+}
+
+.color:nth-child(4):after {
+  background-color: #476EAF;
+  z-index: 9;
+  transform: rotate(120deg);
+}
+
+.color:nth-child(5):after {
+  background-color: #9f49ac;
+  z-index: 8;
+  transform: rotate(150deg);
+}
+
+.color:nth-child(6):after {
+  background-color: #CC42A2;
+  z-index: 7;
+  transform: rotate(180deg);
+}
+
+.color:nth-child(7):after {
+  background-color: #FF3BA7;
+  z-index: 6;
+  transform: rotate(180deg);
+}
+
+.color:nth-child(8):after {
+  background-color: #fe0048;
+  z-index: 5;
+  transform: rotate(210deg);
+}
+
+.color:nth-child(9):after {
+  background-color: #fe3000;
+  z-index: 4;
+  transform: rotate(240deg);
+}
+
+.color:nth-child(10):after {
+  background-color: #fe6c00;
+  z-index: 3;
+  transform: rotate(270deg);
+}
+
+.color:nth-child(11):after {
+  background-color: #FFCC00;
+  z-index: 2;
+  transform: rotate(300deg);
+}
+
+.color:nth-child(12):after {
+  background-color: #EDE604;
+  z-index: 1;
+  transform: rotate(330deg);
+}
+
+.color:nth-child(n+7) {
+  transform: rotate(180deg);
+}
+
+.center {
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+  left: calc(50% - 3.15em);
+  top: calc(50% - 3.15em);
+  width: 6.3em;
+  height: 6.3em;
+  z-index: 2;
+  background-image: linear-gradient(to bottom, #111, #333);
+  box-shadow: inset 0 3px 7px 0px #000, 0 25px 30px -5px rgba(0, 0, 0, 0.5);
+}
+.center:before {
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+  left: calc(50% - 2.1em);
+  top: calc(50% - 2.1em);
+  width: 4.2em;
+  height: 4.2em;
+  background-image: linear-gradient(to bottom, #1b1b1b 20%, #aaaaaa);
+  box-shadow: 0 25px 30px -5px rgba(0, 0, 0, 0.5);
+}
+.center:after {
+  position: absolute;
+  color: #9effff;
+  border-radius: 50%;
+  left: calc(50% - 10px);
+  top: calc(50% - 25px);
+  font-size: 40px;
+  font-weight: 800;
+}
+.center1:after {
+  content: "1";
+}
+.center2:after {
+  content: "2";
+  left: calc(50% - 15px);
+}
+
+.wrapper__pin {
+  transform: rotate(0deg);
+  transform-origin: 50px 50px;
+  -ms-transform-origin: 50px 50px;
+  -webkit-transform-origin: 50px 50px;
+  /* Safari and Chrome */
+  z-index: -1;
+  position: absolute;
+  transition: all 1s ease;
+}
+
+.pin {
+  width: 2.1em;
+  height: 2.1em;
+  transform: rotate(50deg) skew(30deg, 20deg);
+  box-shadow: inset 0px 0px 4px 1px rgba(0, 0, 0, 0.1), 0 0 12px 3px rgba(0, 0, 0, 0.2);
+  background: #FFF;
+  position: absolute;
+  z-index: -1;
+  left: 32px;
+  top: 3px;
+}
